--- a/react/blogapi/public/index.html
+++ b/react/blogapi/public/index.html
@@ -26,9 +26,16 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body >
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div  id='playing'>
+      <script src="js/balls.js"></script>
+    <div id="root">
+    
+  </div>
+</div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,4 +47,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
