--- a/react/blogapi/public/index.html
+++ b/react/blogapi/public/index.html
@@ -25,16 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-
+<link rel="stylesheet" href="css/home.css">
     <title>React App</title>
   </head>
-  <body >
-
+  <body id='bodymain'>
+    <script src="js/balls.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div  id='playing'>
-      <script src="js/balls.js"></script>
-    <div id="root">
       
+    <div id="root">
+   
   </div>
 
  
